Sat Oct 19 00:38:22 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* ser_sctx.c (kg_oid_externalize, kg_oid_internalize,
 		kg_oid_size): Add a GSSAPI OID magic number to the
 		externalized OID, so that if the OID is skipped, (it is
 		optional), the serialization code can resyncronize if
 		necessary.
		(kg_queue_internalize, kg_queue_externalize,
 		kg_queue_size): New functions to externalize the gssapi
 		queue.
		(kg_ctx_size, kg_ctx_exteranlize, kg_ctx_import): Changed
 		to include the mech_used field and to include the auth
 		context.

	* gssapi_krb5.c (kg_get_context): Add calls to correctly
 		initialize the serializers needed by import and export sec
 		context.

	* delete_sec_context.c (krb5_gss_delete_sec_context): Remember to
		release the mech_used OID if necessary!

Wed Oct 16 17:53:17 1996  Marc Horowitz  <marc@mit.edu>

	* accept_sec_context.c (krb5_gss_accept_sec_context): return an
 	error if the ticket endtime is in the past.  also, cleaned up
 	some error cleanup code.

Thu Oct 10 13:50:49 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* acquire_cred.c (krb5_gss_acquire_cred): Don't let the "timeleft"
 		returned by krb5_gss_acquire_cred be negative!

Wed Oct  9 18:02:43 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* gssapi_krb5.c: Definition of gss_nt_krb5_name was incorrect;
		someone was being a bonehead.

Wed Aug 28 17:45:55 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* util_cksum.c (kg_checksum_channel_bindings): Fix stupid bug;
		don't free buf before it's allocated!

Thu Aug 15 20:52:37 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* init_sec_context.c (make_ap_req): Require des-cbc-crc for now;
        DES3 support is broken.

Fri Aug  2 13:40:16 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* acquire_cred.c (krb5_gss_acquire_cred): Add const to local
		variable which is pointing to const data.

Fri Jul 26 16:58:31 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* Makefile.in (OBJS): Remove trailing backslash on a comment; it